fix legacy editor not visible in survey overview

--- a/app/assets/javascripts/angular/components/surveyOverview/surveyOverview.scss
+++ b/app/assets/javascripts/angular/components/surveyOverview/surveyOverview.scss
@@ -314,6 +314,10 @@ organization-contact-import {
             &.active {
                 border-bottom: 1px solid $blue-1;
             }
+
+            a {
+                color: $gray-1;
+            }
         }
     }
 
